Update slides to reflect change in option syntax

--- a/lectures/1w-Intro and Draw.html
+++ b/lectures/1w-Intro and Draw.html
@@ -2,8 +2,11 @@
 layout: slide
 title: "Lecture 1w"
 description: 
-theme: night
-transition: slide
+reveal:
+    theme: night
+    transition: slide
+    width: 1680
+    height: 1050
 ---
 
 
