--- a/lectures/4w-Nested Loops If.html
+++ b/lectures/4w-Nested Loops If.html
@@ -3,8 +3,11 @@ layout: slide
 published: false
 title: "Lecture 4w"
 description: 
-theme: black
-transition: slide
+reveal:
+    theme: night
+    transition: slide
+    width: 1680
+    height: 1050
 ---
 
 <section data-markdown>
