--- a/lectures/10m-Image_and_Data.html
+++ b/lectures/10m-Image_and_Data.html
@@ -3,8 +3,11 @@ layout: slide
 published: false
 title: "Lecture 10m"
 description: 
-theme: black
-transition: slide
+reveal:
+    theme: night
+    transition: slide
+    width: 1680
+    height: 1050
 ---
 
 
