--- a/lectures/10w-Final Presentation Requirements.html
+++ b/lectures/10w-Final Presentation Requirements.html
@@ -3,8 +3,11 @@ layout: slide
 title: "Lecture 10w"
 published: false
 description: 
-theme: black
-transition: slide
+reveal:
+    theme: night
+    transition: slide
+    width: 1680
+    height: 1050
 ---
 
 <section data-markdown>
